--- a/Fillit/libft/Makefile
+++ b/Fillit/libft/Makefile
@@ -26,7 +26,7 @@ SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c \
 	  ft_strrchr.c ft_strstr.c ft_strsub.c ft_strtrim.c \
 	  ft_tolower.c ft_toupper.c ft_itoa.c ft_lstadd.c \
 	  ft_lstdel.c ft_lstdelone.c ft_lstiter.c ft_lstmap.c \
-	  ft_lstnew.c ft_strsplit.c 
+	  ft_lstnew.c ft_strsplit.c get_next_line.c 
 
 OBJECTS = $(subst .c,.o,$(SRC))
 
